# zkteco_hr

./: .gitignore  ARCHITECTURE.md  Attendance Flag DocType Fields.txt  CLAUDE.md  Employee Checkin DocType Fields.csv  FLAG_ENGINE_MVP.md  FRAPPE_ATTENDANCE_RULES.md  FRAPPE_CUSTOM_APP_AGENT_GUIDE.md  MANIFEST.in  MVP_ROLLOUT_READINESS.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  setup.py  vite.config.ts
.github/workflows/: frappe-asset-smoke.yml  frontend.yml  tests.yml
dev/sandbox/: README.md  frappe-sandbox.json
dewey_time/: hooks.py  patches.txt
dewey_time/attendance_engine/: access.py  coverage_api.py  dev_tools.py  employment_type.py  hr_calendar.py  landing.py  launcher.py  launcher_gates.py  launcher_sync.py  schedule_api.py  schedule_change_log.py  schedule_import.py  schedule_resolver.py
dewey_time/docs/: DEWEY_PORTAL_CUTOVER.md  SCHEDULE_IMPORT_PROMPT.md
dewey_time/patches/: add_adms_bridge_desk_icon.py  add_adms_bridge_desk_link.py  cleanup_adms_bridge_desk_artifacts.py  cleanup_zkteco_hr_desk_artifacts.py  reset_broken_website_theme.py
dewey_time/tests/: test_access.py  test_apply_weekly_schedule.py  test_clear_employee_schedule.py  test_coverage_api.py  test_employment_type.py  test_hooks_launcher_tiles.py  test_landing.py  test_launcher.py  test_launcher_gates.py  test_launcher_sync.py  test_schedule_change_log.py  test_schedule_import.py  (+2 more)
docs/: BRIDGE_AGENT_HANDOFF.md  FRAPPE_ATTENDANCE_RULES.md
e2e/: smoke.spec.ts
src/: App.tsx  index.css
zkteco_hr/: hooks.py  patches.txt
(+609 files in other folders)
