[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkteco_hr"
version = "0.0.1"
description = "ZKTeco attendance engine (Frappe/ERPNext HRMS) - MVP flags + weekly view"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
